--- a/docker/Dockerfile.appservice
+++ b/docker/Dockerfile.appservice
@@ -1,5 +1,5 @@
 # Build the manager binary
-FROM golang:1.16 as builder
+FROM harbor.ym/devops/golang:1.16 as builder
 
 WORKDIR /workspace
 # Copy the Go Modules manifests
@@ -20,7 +20,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a --ldflags "-extldflags -st
 
 # Use distroless as minimal base image to package the manager binary
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
-FROM alpine:latest
+FROM harbor.ym/devops/alpine:1.0
 WORKDIR /
 COPY --from=builder /workspace/appservice .
 
